k8s/currency-exchange-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: currency-exchange-app
  replicas: 1
  template:
    metadata:
      name: currency-exchange-app
      labels:
        app: currency-exchange-app
    spec:
      containers:
        - name: currency-exchange-app
          image: mps4dev/memory:1.0
