k8s/currency-exchange-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange-postgres
spec:
  selector:
    matchLabels:
      app: kodilla-currency-exchange
  template:
    metadata:
      labels:
        app: currency-exchange-postgres
    spec:
      volumes:
        - name: currency-exchange-postgres-storage
          persistentVolumeClaim:
            claimName: currency-exchange-postgres-pvc
      containers:
        - image: library/postgres:9.6
          name: currency-exchange-postgres
          ports:
            - containerPort: 5432
              name: currency-exchange-postgres
          volumeMounts:
            - name: currency-exchange-postgres-storage
              mountPath: /var/lib/postgreaql/data
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-kodilla-currency-exchange
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
        app: currency-exchange-postgres
