k8s/currency-exchange-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-exchange-app
  namespace: default
  labels:
    app: currency-exchange-app
spec:
  selector:
    app: currency-exchange-app
    type: ClousterIP
  ports:
    - name: http
      port: 8069
