k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k8s-kodilla-currency-exchange
  name: k8s-kodilla-currency-exchange
spec:
  type: NodePort
  ports:
    - port: 8069
      protocol: TCP
      targetPort: 8069
      nodePort: 32222
  selector:
    app: k8s-kodilla-currency-exchange
